<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivityVibor">

    <TextView
        android:id="@+id/textView_viborText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viborText"
        android:editable="false"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/rBtnVibor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibor1"
            android:checked="false"
            android:onClick="onRadioClick"/>

        <RadioButton
            android:id="@+id/rBtnVibor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibor2"
            android:checked="false"
            android:onClick="onRadioClick"/>

        <RadioButton
            android:id="@+id/rBtnVibor3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vibor3"
            android:checked="false"
            android:onClick="onRadioClick"/>
    </RadioGroup>

</LinearLayout>